apps/frigate/service.yaml
---
# Service for Frigate
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: rtsp
      port: 8554
      targetPort: 8554
      protocol: TCP
    - name: webrtc-tcp
      port: 8555
      targetPort: 8555
      protocol: TCP
  selector:
    app: frigate
